first classess are complete

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@guseyn/cutie-cluster",
+  "name": "@cuties/cluster",
   "version": "1.0.0",
   "description": "Cutie extension for cluster module in Node.",
   "main": "index.js",
