--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@cuties/assert": "1.1.4",
     "@cuties/is": "1.0.6",
     "@cuties/if-else": "1.0.2",
+    "@cuties/http": "1.2.0",
     "@cuties/object": "1.0.3",
     "test-executor": "1.1.0"
   },
